[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ElonMusgo.gd" type="Script" id=2]
[ext_resource path="res://Sprites/icone_E(2).png" type="Texture" id=3]
[ext_resource path="res://Sprites/14-shading.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interior prédio teórico 1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Interior.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 3.28104 )

[node name="ElonMusgo" type="Node2D"]

[node name="Interior" type="Sprite" parent="."]
position = Vector2( 944, -1000 )
scale = Vector2( 7.13542, 6.10833 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="MentorColisionBody" type="StaticBody2D" parent="Interior"]
position = Vector2( -47.8437, 164.311 )
scale = Vector2( 1.77199, 2.00379 )

[node name="MentorColision" type="CollisionPolygon2D" parent="Interior/MentorColisionBody"]
position = Vector2( 70.1124, -28.7434 )
polygon = PoolVector2Array( -97.961, -126.951, -97.6447, -103.993, -97.4865, -90.022, -151.188, -89.9403, -151.347, -101.378, -110.774, -101.378, -110.536, -126.869 )
__meta__ = {
"_editor_description_": "llide"
}

[node name="MentorInterectionArea" type="Area2D" parent="Interior"]
script = ExtResource( 2 )

[node name="MentorInterationc" type="CollisionPolygon2D" parent="Interior/MentorInterectionArea"]
position = Vector2( 125.22, -56.8076 )
polygon = PoolVector2Array( -222.272, -90.6958, -221.431, -16.5348, -309.723, -17.0259, -317.291, -17.0259, -316.519, 6.71207, -200.235, 4.0076, -201.109, -90.6958 )

[node name="EButton" type="Sprite" parent="Interior/MentorInterectionArea"]
position = Vector2( -130.476, -147.013 )
scale = Vector2( 0.0242761, 0.0288865 )
texture = ExtResource( 3 )

[node name="OpenWorld" type="Area2D" parent="Interior"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interior/OpenWorld"]
position = Vector2( -132.718, 189.42 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -1, -16 )

[node name="NPC" type="Sprite" parent="."]
position = Vector2( 14, -1741 )
scale = Vector2( 1.98917, 1.1015 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="Interior/MentorInterectionArea" to="Interior" method="_on_AreaInteraoMentor_body_entered"]
[connection signal="body_exited" from="Interior/MentorInterectionArea" to="Interior" method="_on_AreaInteraoMentor_body_exited"]
[connection signal="body_entered" from="Interior/OpenWorld" to="Interior" method="_on_OpenWorld_body_entered"]
